# Copyright 2018 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

assert(toolchain.environment == "efi")

source_set("lib") {
  sources = [
    "console-printf.c",
    "ctype.c",
    "efi/guids.c",
    "inet.c",
    "loadfile.c",
    "printf.c",
    "stdlib.c",
    "string.c",
    "strings.c",
    "xefi.c",
  ]
}
