# Copyright 2018 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

assert(toolchain.environment == "efi")

source_set("src") {
  sources = [
    "cmdline.c",
    "device_id.c",
    "diskio.c",
    "framebuffer.c",
    "inet6.c",
    "misc.c",
    "netboot.c",
    "netifc.c",
    "osboot.c",
    "pci.c",
    "zircon.c",
  ]
}
