# Copyright 2018 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("platform") {
  sources = [
    "debug.cpp",
    "init.cpp",
    "power.cpp",
  ]
  deps += [
    "$zx/kernel/lib/console",
    "$zx/system/ulib/zxcpp",
  ]
}
