# Copyright 2018 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("tests") {
  cflags = [ "-fno-builtin" ]
  sources = [
    "alloc_checker_tests.cpp",
    "benchmarks.cpp",
    "cache_tests.cpp",
    "clock_tests.cpp",
    "fibo.cpp",
    "lock_dep_tests.cpp",
    "mem_tests.cpp",
    "preempt_disable_tests.cpp",
    "printf_tests.cpp",
    "resource_tests.cpp",
    "sleep_tests.cpp",
    "string_tests.cpp",
    "sync_ipi_tests.cpp",
    "tests.cpp",
    "thread_tests.cpp",
    "timer_tests.cpp",
    "uart_tests.cpp",
  ]
  deps += [
    "$zx/kernel/lib/console",
    "$zx/kernel/lib/crypto",
    "$zx/kernel/lib/debuglog",
    "$zx/kernel/lib/fbl",
    "$zx/kernel/lib/header_tests",
    "$zx/kernel/lib/unittest",
    "$zx/kernel/object",
  ]
}
