# Copyright 2018 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("top") {
  sources = [
    "init.cpp",
    "main.cpp",
  ]
  deps += [
    "$zx/kernel/kernel",
    "$zx/kernel/lib/debuglog",
    "$zx/kernel/platform",
    "$zx/kernel/target",
  ]
}
