# Copyright 2018 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

library("vm") {
  kernel = true
  sources = [
    "bootalloc.cpp",
    "bootreserve.cpp",
    "kstack.cpp",
    "page.cpp",
    "pmm.cpp",
    "pmm_arena.cpp",
    "pmm_node.cpp",
    "vm.cpp",
    "vm_address_region.cpp",
    "vm_address_region_or_mapping.cpp",
    "vm_aspace.cpp",
    "vm_mapping.cpp",
    "vm_object.cpp",
    "vm_object_paged.cpp",
    "vm_object_physical.cpp",
    "vm_page_list.cpp",
    "vm_unittest.cpp",
    "vmm.cpp",
  ]
  deps = [
    "$zx/kernel/lib/fbl",
    "$zx/kernel/lib/user_copy",
    "$zx/system/ulib/pretty",
    "$zx/third_party/ulib/cryptolib",
  ]
}
